Added LibVLCSharp.WinUI for WinUI VideoView and WinUI Sample App. Direct3D11Resources enhanced for Composition SwapChains. Proper Dispose for all COM things

--- a/samples/LibVLCSharp.CustomRendering.Direct3D11/LibVLCSharp.CustomRendering.Direct3D11.csproj
+++ b/samples/LibVLCSharp.CustomRendering.Direct3D11/LibVLCSharp.CustomRendering.Direct3D11.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <UseWindowsForms>true</UseWindowsForms>
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\LibVLCSharp\LibVLCSharp.csproj" />
+    <ProjectReference Include="..\Direct3D11\LibVLCSharp.Direct3D11.TerraFX\LibVLCSharp.Direct3D11.TerraFX.csproj" />
   </ItemGroup>
   
 </Project>
